Fix branding page overflowing, set base font size to 16px

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,6 +22,7 @@
 
   html {
     overflow-x: hidden;
+    font-size: 16px;
   }
 }
 
